--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
+    "redux": "^4.2.0",
     "redux-saga": "^1.2.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
